--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "dotenv": "^8.1.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.0",
     "react-scripts": "3.1.1",
-    "redux": "^4.0.4"
+    "redux": "^4.0.4",
+    "redux-devtools": "^3.5.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -51,6 +55,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "prop-types": "^15.7.2",
     "react-test-renderer": "^16.9.0",
+    "redux-devtools-extension": "^2.13.8",
     "selenium-standalone": "^6.16.0",
     "wdio-chromedriver-service": "^5.0.2",
     "webdriverio": "^5.12.4"
